@@ -27,23 +27,28 @@
 package org.mitre.mpf.wfm.camelOps;
 
 import org.apache.camel.Exchange;
+import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.TemporaryFolder;
 import org.mitre.mpf.test.TestUtil;
 import org.mitre.mpf.wfm.camel.operations.mediainspection.MediaInspectionProcessor;
 import org.mitre.mpf.wfm.camel.operations.mediainspection.MediaMetadataValidator;
 import org.mitre.mpf.wfm.data.InProgressBatchJobsService;
 import org.mitre.mpf.wfm.data.entities.persistent.MediaImpl;
-import org.mitre.mpf.wfm.enums.BatchJobStatusType;
-import org.mitre.mpf.wfm.enums.IssueCodes;
-import org.mitre.mpf.wfm.enums.MpfHeaders;
-import org.mitre.mpf.wfm.enums.UriScheme;
+import org.mitre.mpf.wfm.enums.*;
 import org.mitre.mpf.wfm.util.IoUtils;
 import org.mitre.mpf.wfm.util.JniLoader;
+import org.mitre.mpf.wfm.util.PropertiesUtil;
+import org.mitre.mpf.wfm.util.ThreadUtil;
+import org.mockito.ArgumentCaptor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.net.URI;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.Map;
@@ -55,15 +60,23 @@ import static org.mitre.mpf.test.TestUtil.nonEmptyMap;
 import static org.mockito.Mockito.*;
 
 public class TestMediaInspectionProcessor {
-	private static final Logger log = LoggerFactory.getLogger(TestMediaInspectionProcessor.class);
-	private static final int MINUTES = 1000*60; // 1000 milliseconds/second & 60 seconds/minute.
+    private static final Logger LOG = LoggerFactory.getLogger(TestMediaInspectionProcessor.class);
+    private static final int MINUTES = 1000*60; // 1000 milliseconds/second & 60 seconds/minute.
 
-    private final InProgressBatchJobsService mockInProgressJobs = mock(InProgressBatchJobsService.class);
+    private final PropertiesUtil _mockPropertiesUtil = mock(PropertiesUtil.class);
 
-    private final MediaMetadataValidator mediaMetadataValidator = new MediaMetadataValidator(mockInProgressJobs);
+    private final InProgressBatchJobsService _mockInProgressJobs
+            = mock(InProgressBatchJobsService.class);
 
-    private final MediaInspectionProcessor mediaInspectionProcessor
-            = new MediaInspectionProcessor(mockInProgressJobs, new IoUtils(), mediaMetadataValidator);
+    private final MediaMetadataValidator _mockMediaMetadataValidator
+            = mock(MediaMetadataValidator.class);
+
+    private final MediaInspectionProcessor _mediaInspectionProcessor
+            = new MediaInspectionProcessor(_mockPropertiesUtil, _mockInProgressJobs, new IoUtils(),
+                                           _mockMediaMetadataValidator);
+
+    @Rule
+    public TemporaryFolder _tempFolder = new TemporaryFolder();
 
 
     private static final AtomicInteger SEQUENCE = new AtomicInteger();
@@ -71,37 +84,44 @@ public class TestMediaInspectionProcessor {
         return SEQUENCE.incrementAndGet();
     }
 
+
     @BeforeClass
     public static void initClass() {
         assertTrue(JniLoader.isLoaded());
+        ThreadUtil.start();
     }
 
-	@Test(timeout = 5 * MINUTES)
-	public void testImageInspection() {
-		log.info("Starting image media inspection test.");
+    @Before
+    public void init() {
+        when(_mockMediaMetadataValidator.skipInspection(anyLong(), any()))
+                .thenReturn(false);
+    }
+
+
+    @Test(timeout = 5 * MINUTES)
+    public void testImageInspection() {
+        LOG.info("Starting image media inspection test.");
 
         long jobId = next(), mediaId = next();
         MediaImpl media = inspectMedia(jobId, mediaId, "/samples/meds1.jpg", Collections.emptyMap());
 
-		assertFalse(String.format("The response entity must not fail. Message: %s.", media.getErrorMessage()),
-				media.isFailed());
+        assertFalse(String.format("The response entity must not fail. Message: %s.", media.getErrorMessage()),
+                media.isFailed());
 
-		String targetType = "image";
-		int targetLength = 1;
-		String targetHash = "c067e7eed23a0fe022140c30dbfa993ae720309d6567a803d111ecec739a6713";//`sha256sum meds1.jpg`
+        String mediaHash = "c067e7eed23a0fe022140c30dbfa993ae720309d6567a803d111ecec739a6713";// `sha256sum meds1.jpg`
 
-		verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                                        eq(targetLength), notNull());
-		verifyNoJobOrMediaError();
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.IMAGE), eq("image/jpeg"),
+                                        eq(1), notNull());
+        verifyNoJobOrMediaError();
 
-		log.info("Image media inspection test passed.");
-	}
+        LOG.info("Image media inspection test passed.");
+    }
 
-	/** Tests that the results from a video file are sane. */
-	@Test(timeout = 5 * MINUTES)
-	public void testVideoInspection() {
-		log.info("Starting video media inspection test.");
+
+    @Test(timeout = 5 * MINUTES)
+    public void testVideoInspection() {
+        LOG.info("Starting video media inspection test.");
 
         long jobId = next(), mediaId = next();
         MediaImpl media = inspectMedia(jobId, mediaId, "/samples/video_01.mp4", Collections.emptyMap());
@@ -109,35 +129,20 @@ public class TestMediaInspectionProcessor {
         assertFalse(String.format("The response entity must not fail. Message: %s.", media.getErrorMessage()),
                 media.isFailed());
 
-        String targetType = "video";
-        int targetLength = 90; //`ffprobe -show_packets video_01.mp4 | grep video | wc -l`
-        String targetHash = "5eacf0a11d51413300ee0f4719b7ac7b52b47310a49320703c1d2639ebbc9fea"; //`sha256sum video_01.mp4`
+        String mediaHash = "5eacf0a11d51413300ee0f4719b7ac7b52b47310a49320703c1d2639ebbc9fea"; // `sha256sum video_01.mp4`
+        int frameCount = 90; // `ffprobe -show_packets video_01.mp4 | grep video | wc -l`
 
-        verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                                        eq(targetLength), nonEmptyMap());
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.VIDEO), eq("video/mp4"),
+                        eq(frameCount), nonEmptyMap());
         verifyNoJobOrMediaError();
 
-        log.info("Video media inspection test passed.");
+        LOG.info("Video media inspection test passed.");
     }
 
-    /** Tests that the results from a video file are sane. */
     @Test(timeout = 5 * MINUTES)
-    public void testVideoInspectionInvalid() {
-        log.info("Starting invalid video media inspection test.");
-
-        long jobId = next(), mediaId = next();
-        inspectMedia(jobId, mediaId, "/samples/video_01_invalid.mp4", Collections.emptyMap());
-
-        verifyMediaError(jobId, mediaId);
-
-        log.info("Invalid video media inspection test passed.");
-    }
-
-	/** Tests that the results from an audio file are sane. */
-	@Test(timeout = 5 * MINUTES)
-	public void testAudioInspection() {
-		log.info("Starting audio media inspection test.");
+    public void testAudioInspection() {
+        LOG.info("Starting audio media inspection test.");
 
         long jobId = next(), mediaId = next();
         MediaImpl media = inspectMedia(jobId, mediaId, "/samples/green.wav", Collections.emptyMap());
@@ -145,22 +150,67 @@ public class TestMediaInspectionProcessor {
         assertFalse(String.format("The response entity must not fail. Message: %s.", media.getErrorMessage()),
                 media.isFailed());
 
-        String targetType = "audio";
-        int targetLength = -1; //`ffprobe -v error -show_entries format=duration -of default=noprint_wrappers=1:nokey=1 green.wav` - actually produces 2.200000
-        String targetHash = "237739f8d6ff3459d747f79d272d148d156a696bad93f3ddecc2350c4ee5d9e0"; //`sha256sum green.wav`
+        String mediaHash = "237739f8d6ff3459d747f79d272d148d156a696bad93f3ddecc2350c4ee5d9e0"; // `sha256sum green.wav`
 
-        verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                                        eq(targetLength), nonEmptyMap());
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.AUDIO),
+                        eq("audio/vnd.wave"), eq(-1), nonEmptyMap());
         verifyNoJobOrMediaError();
 
-		log.info("Audio media inspection test passed.");
-	}
+        LOG.info("Audio media inspection test passed.");
+    }
 
-	/** Tests that the results from a file which is not accessible is sane. */
-	@Test(timeout = 5 * MINUTES)
-	public void testInaccessibleFileInspection()  {
-		log.info("Starting inaccessible file media inspection test.");
+    @Test(timeout = 5 * MINUTES)
+    public void testVideoToAudioFallback() {
+        LOG.info("Starting media inspection test with video to audio fallback.");
+
+        long jobId = next(), mediaId = next();
+        MediaImpl media = inspectMedia(jobId, mediaId, "/samples/video_02_audio_only.mp4", Collections.emptyMap());
+
+        verify(_mockInProgressJobs, atLeastOnce())
+                .addWarning(eq(jobId), eq(mediaId), eq(IssueCodes.MISSING_VIDEO_STREAM), nonBlank());
+
+        assertFalse(String.format("The response entity must not fail. Message: %s.", media.getErrorMessage()),
+                media.isFailed());
+
+        String mediaHash = "5891ecaf9423b58526e5a11f0409c329ceec95551357f424ba8a19a3578327ba"; // `sha256sum video_02_audio_only`
+
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.AUDIO), eq("video/mp4"),
+                        eq(-1), nonEmptyMap());
+        verifyNoJobOrMediaError();
+
+        LOG.info("Media inspection test with video to audio fallback passed.");
+    }
+
+    @Test(timeout = 5 * MINUTES)
+    public void testVideoToUnknownFallback() {
+        LOG.info("Starting media inspection test with video to unknown fallback.");
+
+        long jobId = next(), mediaId = next();
+        MediaImpl media = inspectMedia(jobId, mediaId, "/samples/video_01_invalid.mp4", Collections.emptyMap());
+
+        verify(_mockInProgressJobs, atLeastOnce())
+                .addWarning(eq(jobId), eq(mediaId), eq(IssueCodes.MISSING_VIDEO_STREAM), nonBlank());
+        verify(_mockInProgressJobs, atLeastOnce())
+                .addWarning(eq(jobId), eq(mediaId), eq(IssueCodes.MISSING_AUDIO_STREAM), nonBlank());
+
+        assertFalse(String.format("The response entity must not fail. Message: %s.", media.getErrorMessage()),
+                media.isFailed());
+
+        String mediaHash = "239dbbbe6faf66af7eb471ad54b993526221043ced333723a4fd450d107f272c"; // `sha256sum video_01_invalid.mp4`
+
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.UNKNOWN), eq("video/mp4"),
+                        eq(-1), nonEmptyMap());
+        verifyNoJobOrMediaError();
+
+        LOG.info("Media inspection test with video to unknown fallback passed..");
+    }
+
+    @Test(timeout = 5 * MINUTES)
+    public void testInaccessibleFileInspection()  {
+        LOG.info("Starting inaccessible file media inspection test.");
 
         long jobId = next(), mediaId = next();
         MediaImpl media = inspectMedia(jobId, mediaId, URI.create("file:/asdfasfdasdf124124sadfasdfasdf.bin"),
@@ -169,210 +219,184 @@ public class TestMediaInspectionProcessor {
         assertTrue(media.isFailed());
         verifyMediaError(jobId, mediaId);
 
-		log.info("Inaccessible file media inspection test passed.");
-	}
-
-    /** Tests that media inspection is properly skipped when given valid audio metadata. */
-    @Test(timeout = 5 * MINUTES)
-    public void testSkipAudioInspection() {
-        log.info("Starting skip audio media inspection test.");
-
-        long jobId = next(), mediaId = next();
-        Map<String, String> mediaMetadata = Map.of(
-                "MIME_TYPE", "audio/green.wav",
-                "MEDIA_HASH", "237739f8d6ff3459d747f79d272d148d156a696bad93f3ddecc2350c4ee5d9e0",
-                "DURATION", "10");
-        inspectMedia(jobId, mediaId, "/samples/green.wav", mediaMetadata);
-
-        verifyNoMediaWarning();
-
-        String targetType = "audio";
-        int targetLength = -1;
-        String targetHash = "237739f8d6ff3459d747f79d272d148d156a696bad93f3ddecc2350c4ee5d9e0"; //`sha256sum green.wav`
-
-        verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                        eq(targetLength), nonEmptyMap());
-        verifyNoJobOrMediaError();
-
-        log.info("Skip audio media inspection test passed.");
+        LOG.info("Inaccessible file media inspection test passed.");
     }
 
-    /** Tests that media inspection is properly skipped when given valid generic metadata. */
     @Test(timeout = 5 * MINUTES)
-    public void testSkipGenericInspection() {
-        log.info("Starting skip generic media inspection test.");
+    public void testAdtsFile() {
+        LOG.info("Starting adts file test.");
 
         long jobId = next(), mediaId = next();
-        Map<String, String> mediaMetadata = Map.of(
-                "MIME_TYPE", "application/green.wav",
-                "MEDIA_HASH", "237739f8d6ff3459d747f79d272d148d156a696bad93f3ddecc2350c4ee5d9e0");
-        inspectMedia(jobId, mediaId, "/samples/green.wav", mediaMetadata);
+        MediaImpl media = inspectMedia(jobId, mediaId, "/samples/green.adts", Collections.emptyMap());
 
-        verifyNoMediaWarning();
+        assertFalse(String.format("The response entity must not fail. Message: %s.", media.getErrorMessage()),
+                media.isFailed());
 
-        String targetType = "application";
-        int targetLength = -1;
-        String targetHash = "237739f8d6ff3459d747f79d272d148d156a696bad93f3ddecc2350c4ee5d9e0"; //`sha256sum green.wav`
+        String mediaHash = "b587735773acb39e7d092305dc47db14c568c446dee63786c58cd4e7711b6739"; // `sha256sum green.adts`
 
-        verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                        eq(targetLength), nonEmptyMap());
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.AUDIO),
+                        eq("audio/x-hx-aac-adts"), eq(-1), nonEmptyMap());
         verifyNoJobOrMediaError();
 
-        log.info("Skip generic media inspection test passed.");
+        LOG.info("adts file test passed.");
     }
 
-    /** Tests that media inspection is properly skipped when given valid image metadata. */
     @Test(timeout = 5 * MINUTES)
-    public void testSkipImageInspection() {
-        log.info("Starting skip image media inspection test.");
+    public void testTsFile() {
+        LOG.info("Starting ts file test.");
 
         long jobId = next(), mediaId = next();
-        Map<String, String> mediaMetadata = Map.of(
-                "MIME_TYPE", "image/meds1.jpg",
-                "MEDIA_HASH", "c067e7eed23a0fe022140c30dbfa993ae720309d6567a803d111ecec739a6713",
-                "FRAME_WIDTH", "10",
-                "FRAME_HEIGHT", "10",
-                "EXIF_ORIENTATION", "0",
-                "ROTATION", "0",
-                "HORIZONTAL_FLIP", "FALSE");
-        inspectMedia(jobId, mediaId, "/samples/meds1.jpg", mediaMetadata);
+        MediaImpl media = inspectMedia(jobId, mediaId, "/samples/bbb24p_00_short.ts", Collections.emptyMap());
 
-        verifyNoMediaWarning();
+        assertFalse(String.format("The response entity must not fail. Message: %s.", media.getErrorMessage()),
+                media.isFailed());
 
-        String targetType = "image";
-        int targetLength = 1;
-        String targetHash = "c067e7eed23a0fe022140c30dbfa993ae720309d6567a803d111ecec739a6713";//`sha256sum meds1.jpg`
+        String mediaHash = "06091f89bfa66d0f882f1a71f68858a8ec1ffaa96919b9f87b30a14795f0189f"; // `sha256sum bbb24p_00_short.ts`
 
-        verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                        eq(targetLength), notNull());
-        verifyNoJobOrMediaError();
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.VIDEO),
+                        eq("video/vnd.dlna.mpeg-tts"), eq(10), nonEmptyMap());
 
-        log.info("Skip image media inspection test passed.");
-    }
-
-    /** Tests that media inspection is properly skipped when given valid video metadata. */
-    @Test(timeout = 5 * MINUTES)
-    public void testSkipVideoInspection() {
-        log.info("Starting skip video media inspection test.");
-
-        long jobId = next(), mediaId = next();
-        Map<String, String> mediaMetadata = Map.of(
-                "MIME_TYPE", "video/video_01.mp4",
-                "MEDIA_HASH", "5eacf0a11d51413300ee0f4719b7ac7b52b47310a49320703c1d2639ebbc9fea",
-                "FRAME_WIDTH", "10",
-                "FRAME_HEIGHT", "10",
-                "FRAME_COUNT", "90",
-                "FPS", "30",
-                "DURATION", "3",
-                "ROTATION", "0");
-        inspectMedia(jobId, mediaId, "/samples/video_01.mp4", mediaMetadata);
-
-        verifyNoMediaWarning();
-
-        String targetType = "video";
-        int targetLength = 90; //`ffprobe -show_packets video_01.mp4 | grep video | wc -l`
-        String targetHash = "5eacf0a11d51413300ee0f4719b7ac7b52b47310a49320703c1d2639ebbc9fea"; //`sha256sum video_01.mp4`
-
-        verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                        eq(targetLength), nonEmptyMap());
+        verify(_mockInProgressJobs)
+                .addWarning(jobId, mediaId, IssueCodes.FRAME_COUNT,
+                            "OpenCV reported the frame count to be 27, but FFmpeg reported it to be 10. 10 will be used.");
 
         verifyNoJobOrMediaError();
 
-        log.info("Skip video media inspection test passed.");
+        LOG.info("ts file test passed.");
     }
 
-    /** Tests that media inspection is not skipped when missing required metadata. */
     @Test(timeout = 5 * MINUTES)
-    public void testSkipInspectionWithMissingMetadata() {
-        log.info("Starting skip media inspection test with missing metadata.");
+    public void testCrushedPngInspection() {
+        when(_mockPropertiesUtil.getTemporaryMediaDirectory())
+                .thenReturn(_tempFolder.getRoot());
 
-        long jobId = next(), mediaId = next();
-        Map<String, String> mediaMetadata = Map.of(
-                "MIME_TYPE", "video/video_01.mp4",
-                "MEDIA_HASH", "5eacf0a11d51413300ee0f4719b7ac7b52b47310a49320703c1d2639ebbc9fea",
-                "FRAME_WIDTH", "10",
-                "FRAME_HEIGHT", "10",
-                // missing FRAME_COUNT
-                "FPS", "30",
-                "DURATION", "3",
-                "ROTATION", "0");
-        inspectMedia(jobId, mediaId, "/samples/video_01.mp4", mediaMetadata);
+        long jobId = next();
+        long mediaId = next();
+        MediaImpl media = inspectMedia(jobId, mediaId, "/samples/pngdefry/lenna-crushed.png",
+                                       Map.of());
 
-        verifyMediaWarning(jobId, mediaId);
+        assertFalse(String.format("The response entity must not fail. Message: %s.",
+                                  media.getErrorMessage()),
+                    media.isFailed());
 
-        String targetType = "video";
-        int targetLength = 90; //`ffprobe -show_packets video_01.mp4 | grep video | wc -l`
-        String targetHash = "5eacf0a11d51413300ee0f4719b7ac7b52b47310a49320703c1d2639ebbc9fea"; //`sha256sum video_01.mp4`
-
-        verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                        eq(targetLength), nonEmptyMap());
         verifyNoJobOrMediaError();
 
-        log.info("Skip media inspection test with missing metadata passed.");
+        // `sha256sum lenna-crushed.png`
+        String mediaHash = "cfcf04d5abe24dd8747b2b859e567864cca883d7dc391171dd682d635509bc89";
+        @SuppressWarnings("unchecked")
+        ArgumentCaptor<Map<String, String>> metadataCaptor = ArgumentCaptor.forClass(Map.class);
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.IMAGE),
+                                        eq("image/png"), eq(1),
+                                        metadataCaptor.capture());
+        assertEquals("512", metadataCaptor.getValue().get("FRAME_WIDTH"));
+        assertEquals("512", metadataCaptor.getValue().get("FRAME_HEIGHT"));
+
+        var pathCaptor = ArgumentCaptor.forClass(Path.class);
+        verify(_mockInProgressJobs)
+                .addConvertedMediaPath(eq(jobId), eq(mediaId), pathCaptor.capture());
+        var defriedPath = pathCaptor.getValue();
+        assertTrue(defriedPath.startsWith(_tempFolder.getRoot().toPath()));
+        assertTrue(defriedPath.getFileName().toString().startsWith("lenna-crushed_defried"));
+        assertTrue(defriedPath.getFileName().toString().endsWith(".png"));
+        assertTrue(Files.exists(defriedPath));
     }
 
-    /** Tests that media inspection is not skipped when invalid metadata is provided. */
     @Test(timeout = 5 * MINUTES)
-    public void testSkipInspectionWithInvalidMetadata() {
-        log.info("Starting skip media inspection test with invalid metadata.");
+    public void testHeicInspection() {
+        when(_mockPropertiesUtil.getTemporaryMediaDirectory())
+                .thenReturn(_tempFolder.getRoot());
 
-        long jobId = next(), mediaId = next();
-        Map<String, String> mediaMetadata = Map.of(
-                "MIME_TYPE", "video/video_01.mp4",
-                "MEDIA_HASH", "5eacf0a11d51413300ee0f4719b7ac7b52b47310a49320703c1d2639ebbc9fea",
-                "FRAME_WIDTH", "10",
-                "FRAME_HEIGHT", "10",
-                "FRAME_COUNT", "90",
-                "FPS", "0", // value should be non-zero
-                "DURATION", "3",
-                "ROTATION", "0");
-        inspectMedia(jobId, mediaId, "/samples/video_01.mp4", mediaMetadata);
+        long jobId = next();
+        long mediaId = next();
+        MediaImpl media = inspectMedia(jobId, mediaId, "/samples/IMG_5355.HEIC",
+                                       Map.of());
 
-        verifyMediaWarning(jobId, mediaId);
+        assertFalse(String.format("The response entity must not fail. Message: %s.",
+                                  media.getErrorMessage()),
+                    media.isFailed());
 
-        String targetType = "video";
-        int targetLength = 90; //`ffprobe -show_packets video_01.mp4 | grep video | wc -l`
-        String targetHash = "5eacf0a11d51413300ee0f4719b7ac7b52b47310a49320703c1d2639ebbc9fea"; //`sha256sum video_01.mp4`
-
-        verify(mockInProgressJobs)
-                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(targetHash), startsWith(targetType),
-                        eq(targetLength), nonEmptyMap());
         verifyNoJobOrMediaError();
 
-        log.info("Skip media inspection test with invalid metadata passed.");
+        // `sha256sum IMG_5355.HEIC`
+        String mediaHash = "a671c241b4943919236865df4fa9997f99d80ce4dba276256436f6310914aff2";
+        @SuppressWarnings("unchecked")
+        ArgumentCaptor<Map<String, String>> metadataCaptor = ArgumentCaptor.forClass(Map.class);
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), eq(mediaHash), eq(MediaType.IMAGE),
+                                        eq("image/heic"), eq(1),
+                                        metadataCaptor.capture());
+        assertEquals("3024", metadataCaptor.getValue().get("FRAME_WIDTH"));
+        assertEquals("4032", metadataCaptor.getValue().get("FRAME_HEIGHT"));
+
+        var pathCaptor = ArgumentCaptor.forClass(Path.class);
+        verify(_mockInProgressJobs)
+                .addConvertedMediaPath(eq(jobId), eq(mediaId), pathCaptor.capture());
+        var heicPath = pathCaptor.getValue();
+        assertTrue(heicPath.startsWith(_tempFolder.getRoot().toPath()));
+        assertTrue(heicPath.getFileName().toString().endsWith(".png"));
+        assertTrue(Files.exists(heicPath));
     }
 
-	private void verifyNoJobOrMediaError() {
-	    verify(mockInProgressJobs, never())
+    @Test(timeout = 5 * MINUTES)
+    public void canHandleInvalidExifDimensions() {
+        long jobId = next();
+        long mediaId = next();
+        MediaImpl media = inspectMedia(jobId, mediaId, "/samples/lp-bmw.jpg",
+                                       Map.of());
+
+        assertFalse(String.format("The response entity must not fail. Message: %s.",
+                                  media.getErrorMessage()),
+                    media.isFailed());
+        verifyNoJobOrMediaError();
+
+        @SuppressWarnings("unchecked")
+        ArgumentCaptor<Map<String, String>> metadataCaptor = ArgumentCaptor.forClass(Map.class);
+        verify(_mockInProgressJobs)
+                .addMediaInspectionInfo(eq(jobId), eq(mediaId), notNull(), eq(MediaType.IMAGE),
+                                        eq("image/jpeg"), eq(1),
+                                        metadataCaptor.capture());
+        assertEquals("809", metadataCaptor.getValue().get("FRAME_WIDTH"));
+        assertEquals("606", metadataCaptor.getValue().get("FRAME_HEIGHT"));
+        assertEquals("1", metadataCaptor.getValue().get("EXIF_ORIENTATION"));
+    }
+
+    @Test
+    // No need to explicitly test when skipInspection is false because all other
+    // tests in this class have it set to false.
+    public void canSkipMediaInspection() {
+        long jobId = next();
+        long mediaId = next();
+
+        when(_mockMediaMetadataValidator
+                     .skipInspection(eq(jobId), argThat(m -> m.getId() == mediaId)))
+                .thenReturn(true);
+
+        inspectMedia(jobId, mediaId, URI.create("file:///fake"), Map.of());
+        verify(_mockInProgressJobs, never())
+                .addMediaInspectionInfo(anyLong(), anyLong(), any(), any(), any(), anyInt(), anyMap());
+        verifyNoJobOrMediaError();
+    }
+
+
+    private void verifyNoJobOrMediaError() {
+        verify(_mockInProgressJobs, never())
                 .addError(anyLong(), anyLong(), any(), any());
-	    verify(mockInProgressJobs, never())
+        verify(_mockInProgressJobs, never())
                 .setJobStatus(anyLong(), eq(BatchJobStatusType.ERROR));
     }
 
     private void verifyMediaError(long jobId, long mediaId) {
-        verify(mockInProgressJobs, atLeastOnce())
+        verify(_mockInProgressJobs, atLeastOnce())
                 .addError(eq(jobId), eq(mediaId), eq(IssueCodes.MEDIA_INSPECTION), nonBlank());
-	    verify(mockInProgressJobs)
+        verify(_mockInProgressJobs)
                 .setJobStatus(jobId, BatchJobStatusType.ERROR);
     }
 
-    private void verifyNoMediaWarning() {
-        verify(mockInProgressJobs, never())
-                .addWarning(anyLong(), anyLong(), any(), any());
-    }
-
-    private void verifyMediaWarning(long jobId, long mediaId) {
-        verify(mockInProgressJobs, atLeastOnce())
-                .addWarning(eq(jobId), eq(mediaId), eq(IssueCodes.MEDIA_INSPECTION), nonBlank());
-    }
-
-	private Exchange setupExchange(long jobId, MediaImpl media) {
-	    return MediaTestUtil.setupExchange(jobId, media, mockInProgressJobs);
+    private Exchange setupExchange(long jobId, MediaImpl media) {
+        return MediaTestUtil.setupExchange(jobId, media, _mockInProgressJobs);
     }
 
     private MediaImpl inspectMedia(long jobId, long mediaId, String filePath, Map<String, String> mediaMetadata) {
@@ -385,7 +409,7 @@ public class TestMediaInspectionProcessor {
                 mediaId, mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri), Collections.emptyMap(),
                 mediaMetadata, null);
         Exchange exchange = setupExchange(jobId, media);
-        mediaInspectionProcessor.process(exchange);
+        _mediaInspectionProcessor.process(exchange);
 
         assertEquals("Media ID headers must be set.", mediaId, exchange.getOut().getHeader(MpfHeaders.MEDIA_ID));
         assertEquals("Job ID headers must be set.", jobId, exchange.getOut().getHeader(MpfHeaders.JOB_ID));
